--- a/movies/index.html
+++ b/movies/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Movies</title>
-  <base href="https://github.com/HansellKopp/movies">
+  <base href="https://github.com/HansellKopp/movies/movies">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.7081fc5a3e6b62990fe6.css"></head>
