--- a/movies/index.html
+++ b/movies/index.html
@@ -6,8 +6,8 @@
   <base href="https://github.com/HansellKopp/movies/movies">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.7081fc5a3e6b62990fe6.css"></head>
+<link rel="stylesheet" href="https://github.com/HansellKopp/movies/movies/styles.7081fc5a3e6b62990fe6.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.7425f237727658da0a30.js" defer></script><script src="polyfills.4c919f235a4f64e5145e.js" defer></script><script src="main.c963e9e55df5f7c0889e.js" defer></script></body>
+<script src="https://github.com/HansellKopp/movies/movies/runtime.7425f237727658da0a30.js" defer></script><script src="https://github.com/HansellKopp/movies/movies/polyfills.4c919f235a4f64e5145e.js" defer></script><script src="https://github.com/HansellKopp/movies/movies/main.c963e9e55df5f7c0889e.js" defer></script></body>
 </html>
